2007-03-27  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched sound-juicer for 2.16 and 2.18.

2007-03-26  Abel Cheung  <abelcheung@gmail.com>

	* translation-teams.xml.in: Revert part of my change, I really shouldn't
	decide something that I don't have the right to.

2007-03-24  Claude Paroz  <claude@2xlibre.net>

	* releases.py: Slightly modified language comparisons.

2007-03-24  Abel Cheung  <abelcheung@gmail.com>

	* translation-teams.xml.in: Fix some info for zh_CN team.

2007-03-21  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gdm2 branched for 2.18.

2007-03-20  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added gnome-devel-docs module in extras.
	Added missing module libgnomekbd in desktop for 2.18.
	Fixes bug #420542.

2007-03-19  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: totem, gnome-vfs, eel, nautilus,
	gnome-control-center branched for 2.18.
	gtk-engines moved to desktop category.
	Fixes bug #420099.

2007-03-18  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: eog branched for 2.18.

2007-03-17  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched evolution, evolution-data-server,
	evolution-exchange and gtkhtml for 2.18.

2007-03-16  Claude Paroz  <claude@2xlibre.net>
	
	* releases.xml.in: Removed sawfish reference, unable to generate pot
	file.

2007-03-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched evolution-webcal and changed category of
	network-manager-applet.

2007-03-13  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Branched seahorse and gnome-nettool for 2.18.

2007-03-13  Abel Cheung  <abelcheung@gmail.com>

	* translation-teams.xml.in:
	More info for traditional Chinese team.
	* people.xml.in:
	Add more about my info.
