@@ -119,6 +119,7 @@
   </release>
   <release id="gnome-extras">
     <_description>Extra Gnome Applications</_description>
+    <module id="accerciser"/>
     <module id="alleyoop"/>
     <module id="anjuta"/>
     <module id="atomato"/>
@@ -433,7 +434,7 @@
     <module id="gcompris"/>
     <module id="gnomeicu"/>
     <module id="gtetrinet"/>
-    <module id="gthumb"/>
+    <module id="gthumb" branch="gthumb-2-10"/>
     <module id="hardware-monitor"/>
     <module id="monster-masher"/>
     <module id="pan"/>
