@@ -1,3 +1,9 @@
+2007-03-30  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Added new module accerciser in extras.
+	Added gthumb-2-10 branch. 
+
 2007-03-27  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
